--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,14 +28,14 @@ jobs:
       - name: Build with zbus
         run: >
           cargo install cross;
-          cross +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --release;
+          cross +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --release --target x86_64-unknown-linux-musl;
           mv -fv target/x86_64-unknown-linux-musl/release/notify-send-rs .
 
       - name: Build with dbus
         run: >
           echo -e '\n[dependencies.dbus]\nversion = "0.9.7"\nfeatures = ["vendored"]' >> Cargo.toml;
           cross +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --release --target x86_64-unknown-linux-gnu --features d --no-default-features;
-          mv -fv target/x86_64-unknown-linux-gnu/release/notify-send-rs ./notify-send-rs-dbus;
+          mv -fv target/x86_64-unknown-linux-gnu/release/notify-send-rs ./notify-send-rs-dbus
 
       - name: Strip UPX TAR
         run: >
