--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build with zbus
         run: >
-          rustup component add rust-src --toolchain nightly
+          rustup component add rust-src --toolchain nightly;
           cargo install cross;
           cross +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --release --target x86_64-unknown-linux-musl;
           mv -fv target/x86_64-unknown-linux-musl/release/notify-send-rs .
