--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Build with dbus
         run: >
+          rm -rfv target;
           echo -e '\n[dependencies.dbus]\nversion = "0.9.7"\nfeatures = ["vendored"]' >> Cargo.toml;
           cross +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --release --target x86_64-unknown-linux-gnu --features d --no-default-features;
           mv -fv target/x86_64-unknown-linux-gnu/release/notify-send-rs ./notify-send-rs-dbus
