--- a/.github/workflows/build_on_nix.yaml
+++ b/.github/workflows/build_on_nix.yaml
@@ -342,7 +342,7 @@ jobs:
           #Build
           pushd "$(mktemp -d)" >/dev/null 2>&1
           docker stop "arch-builder" 2>/dev/null ; docker rm "arch-builder" 2>/dev/null
-          docker run --platform="linux/arm64" --privileged --net="host" --name "arch-builder" "archlinux:latest" \
+          docker run --platform="linux/arm64" --privileged --net="host" --name "arch-builder" "azathothas/archlinux:latest" \
            bash -c '
            #Setup ENV
             pacman -Syu --noconfirm && pacman base-devel coreutils curl git jq less moreutils micro nano rsync sudo util-linux wget --sync --noconfirm
@@ -374,7 +374,7 @@ jobs:
           #Build
           pushd "$(mktemp -d)" >/dev/null 2>&1
           docker stop "arch-builder" 2>/dev/null ; docker rm "arch-builder" 2>/dev/null
-          docker run --privileged --net="host" --name "arch-builder" "archlinux:latest" \
+          docker run --privileged --net="host" --name "arch-builder" "azathothas/archlinux:latest" \
            bash -c '
            #Setup ENV
             pacman -Syu --noconfirm && pacman base-devel coreutils curl git jq less moreutils micro nano rsync sudo util-linux wget --sync --noconfirm
