--- a/.github/workflows/build_on_nix.yaml
+++ b/.github/workflows/build_on_nix.yaml
@@ -333,6 +333,14 @@ jobs:
             /tmp/RELEASES/*
         continue-on-error: true
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        continue-on-error: true
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        continue-on-error: true
+        
       - name: MAKEPKG (aarch64-Linux)
         run: |
           #presets
