--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,20 +23,19 @@ jobs:
           override: true
           profile: minimal
           toolchain: nightly
-          target: x86_64-unknown-linux-gnu
+          target: x86_64-unknown-linux-musl
 
       - name: Build with zbus
         run: >
           rustup component add rust-src --toolchain nightly;
-          cargo install cross;
-          cross +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --release --target x86_64-unknown-linux-musl;
+          cargo build --release;
           mv -fv target/x86_64-unknown-linux-musl/release/notify-send-rs .
 
       - name: Build with dbus
         run: >
-          rm -rfv target;
-          echo -e '\n[dependencies.dbus]\nversion = "0.9.7"\nfeatures = ["vendored"]' >> Cargo.toml;
-          cross +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --release --target x86_64-unknown-linux-gnu --features d --no-default-features;
+          cargo install cross;
+          cargo clean;
+          cross build --release --target x86_64-unknown-linux-gnu --features d --no-default-features;
           mv -fv target/x86_64-unknown-linux-gnu/release/notify-send-rs ./notify-send-rs-dbus
 
       - name: Strip UPX TAR
@@ -47,11 +46,6 @@ jobs:
           upx -9 --best notify-send-rs -o notify-send-rs-upx;
           upx -9 --best notify-send-rs-dbus -o notify-send-rs-dbus-upx;
           tar -acvf notify-send-rs.tar.xz ./notify-send-rs*
-
-      - name: Build archlinux package
-        uses: countstarlight/arch-makepkg-action@master
-        with:
-          scripts: makepkg
 
       - name: Release
         uses: softprops/action-gh-release@v1
